# intertwine-cpp-framework

./: CMakeLists.txt  README.md  build-libhv.ps1  build-libhv.sh  build.ps1  build.sh  vcpkg.json
cmake/: alkaidlab_fw-config.cmake.in  intertwine_cpp_framework-config.cmake.in
doc/: API.md  Architecture.md  Modules.md
doc_en/: API.md  Architecture.md  Modules.md  README.md
include/fw/: Context.hpp  IFileTransfer.hpp  Router.hpp  WebSocketTransport.hpp
include/intertwine/fw/: Application.hpp  AtomicCounter.hpp  Base64.hpp  CertUtil.hpp  Context.hpp  FlowController.hpp  HashUtil.hpp  HttpConstants.hpp  HttpTransport.hpp  HttpsTransport.hpp  HvTransport.hpp  IFileTransfer.hpp  ITransport.hpp  IdUtil.hpp  IniConfig.hpp  JsonUtil.hpp  JwtUtil.hpp  LockfreeQueue.hpp  LockfreeQueue.inl  Log.hpp  LogConfig.hpp  Logger.hpp  Middleware.hpp  PasswordUtil.hpp  PathGuard.hpp  Router.hpp  SPSCQueue.hpp  SPSCQueue.inl  ServerTransport.hpp  SupervisedThreadPool.hpp  TcpTransport.hpp  TimeUtil.hpp  TransportFactory.hpp  TransportTypes.hpp  WebSocketTransport.hpp  WinPosixShim.hpp
src/: AccelTransfer.cpp  AccelTransfer.hpp  Application.cpp  AtomicCounter.cpp  Base64.cpp  CertUtil.cpp  Context.cpp  FileTransferFactory.cpp  FlowController.cpp  HashUtil.cpp  HttpConstants.cpp  HttpTransport.cpp  HttpsTransport.cpp  HvTransport.cpp  IdUtil.cpp  IniConfig.cpp  JwtUtil.cpp  LegacyTransfer.cpp  LegacyTransfer.hpp  LogConfig.cpp  Logger.cpp  Middleware.cpp  PasswordUtil.cpp  Router.cpp  StreamTransfer.cpp  StreamTransfer.hpp  SupervisedThreadPool.cpp  TcpTransport.cpp  TimeUtil.cpp  TransportFactory.cpp  WebSocketTransport.cpp
test/: test_Application.cpp  test_AtomicCounter.cpp  test_Base64.cpp  test_Base64Util.cpp  test_Context.cpp  test_FileTransfer.cpp  test_FlowController.cpp  test_HashUtil.cpp  test_HttpConstants.cpp  test_IdUtil.cpp  test_IniConfig.cpp  test_JsonUtil.cpp  test_JwtUtil.cpp  test_LockfreeQueue.cpp  test_LogConfig.cpp  test_Middleware.cpp  test_PasswordUtil.cpp  test_PathGuard.cpp  test_Router.cpp  test_SPSCQueue.cpp  test_TimeUtil.cpp
